@@ -68,6 +68,20 @@ name|lucene
 operator|.
 name|analysis
 operator|.
+name|Token
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|Tokenizer
 import|;
 end_import
@@ -340,9 +354,9 @@ parameter_list|)
 block|{
 name|this
 argument_list|(
-name|AttributeFactory
+name|Token
 operator|.
-name|DEFAULT_ATTRIBUTE_FACTORY
+name|TOKEN_ATTRIBUTE_FACTORY
 argument_list|,
 name|bufferSize
 argument_list|,
