@@ -24,6 +24,20 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|analysis
+operator|.
+name|Token
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|collation
 operator|.
 name|tokenattributes
@@ -134,7 +148,7 @@ operator|.
 name|AttributeFactory
 name|delegate
 decl_stmt|;
-comment|/**    * Create an ICUCollationAttributeFactory, using     * {@link org.apache.lucene.util.AttributeSource.AttributeFactory#DEFAULT_ATTRIBUTE_FACTORY} as the    * factory for all other attributes.    * @param collator CollationKey generator    */
+comment|/**    * Create an ICUCollationAttributeFactory, using     * {@link org.apache.lucene.analysis.Token#TOKEN_ATTRIBUTE_FACTORY} as the    * factory for all other attributes.    * @param collator CollationKey generator    */
 DECL|method|ICUCollationAttributeFactory
 specifier|public
 name|ICUCollationAttributeFactory
@@ -145,11 +159,9 @@ parameter_list|)
 block|{
 name|this
 argument_list|(
-name|AttributeSource
+name|Token
 operator|.
-name|AttributeFactory
-operator|.
-name|DEFAULT_ATTRIBUTE_FACTORY
+name|TOKEN_ATTRIBUTE_FACTORY
 argument_list|,
 name|collator
 argument_list|)
