@@ -839,9 +839,17 @@ parameter_list|)
 block|{
 name|this
 argument_list|(
-name|AttributeFactory
+name|org
 operator|.
-name|DEFAULT_ATTRIBUTE_FACTORY
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|Token
+operator|.
+name|TOKEN_ATTRIBUTE_FACTORY
 argument_list|,
 name|userDictionary
 argument_list|,
