@@ -70,6 +70,20 @@ name|lucene
 operator|.
 name|analysis
 operator|.
+name|Token
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|cn
 operator|.
 name|smart
@@ -238,9 +252,9 @@ parameter_list|()
 block|{
 name|this
 argument_list|(
-name|AttributeFactory
+name|Token
 operator|.
-name|DEFAULT_ATTRIBUTE_FACTORY
+name|TOKEN_ATTRIBUTE_FACTORY
 argument_list|)
 expr_stmt|;
 block|}
