@@ -28,6 +28,20 @@ name|lucene
 operator|.
 name|analysis
 operator|.
+name|Token
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|Tokenizer
 import|;
 end_import
@@ -283,9 +297,9 @@ name|typeAttributeFeaturePath
 argument_list|,
 name|configurationParameters
 argument_list|,
-name|AttributeFactory
+name|Token
 operator|.
-name|DEFAULT_ATTRIBUTE_FACTORY
+name|TOKEN_ATTRIBUTE_FACTORY
 argument_list|)
 expr_stmt|;
 block|}
